--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <h1>Template</h1>
   
-  <p>This is a blank template for a web page. Changing or not
+  <p>This is a blank template for a web page. Changing or not its changing
     
   </p>
   <p>This is a blank template for a web page.</p>
