--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -34,17 +35,38 @@
         <h4>Profile Page</h4>
         <br />
         Username:
-        <div class="info" id="Username">Guest</div>
+        <span class="info" id="Username">Guest</span>
         <br />
         Email:
-        <span class="info" id="Username">---</span>
+        <span class="info" id="Email">---</span>
         <br />
         Mobile Number:
-        <span class="info" id="Username">---</span>
+        <span class="info" id="Mobile">---</span>
         <br />
         Subscription:
-        <span class="info" id="Username">None</span>
+        <span class="info" id="Subscription">None</span>
         <br />
+        <button class="btn" onclick="editProfile()" id="editbtn">Edit Profile</button>
+        <br />
+        <hr />
+        <br />
+        Liked songs:
+        <br />
+        Add the liked songs from database here.
+        <br /><br />
+        <hr />
+        <br />
+        Playlists:
+        <br />
+        Add the playlists from database here.
+        <br /><br />
+        <hr />
+        <br />
+        History:
+        <br />
+        Add the history from database here.
+        <br /><br />
+        <hr />
       </div>
     </div>
   </body>
