--- a/profile.html
+++ b/profile.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="Stylesheets/style.css" />
+    <script src="Scripts/profile.js"></script>
     <title>Document</title>
   </head>
   <body>
