Setup base node

--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
         <nav>
           <ul>
             <li class="nav"><a href="#">HOME</a></li>
-            <li class="nav"><a href="#">ABOUT US</a></li>
+            <li class="nav"><a href="about.html">ABOUT US</a></li>
             <li class="nav"><a href="index.html">LOGOUT</a></li>
           </ul>
         </nav>
