A lot of changes

--- a/about.html
+++ b/about.html
@@ -15,15 +15,12 @@
           <li>
             <a href="index.html"><u>Home</u></a>
           </li>
-          <li>
-            <a href="#"><u>Gallery</u></a>
-          </li>
         </ul>
       </div>
       <hr />
     </div>
     <br />
-    <img src="logo.jpeg" align="right" />
+    <img src="Assets/logo.jpeg" align="right" />
     <p>
       <u><b>About Us</b></u>
     </p>
@@ -50,19 +47,19 @@
       <hr />
       <h1 class="clr1"><u>Our Team</u></h1>
       <div class="gallery">
-        <img src="fl.jpg" />
+        <img src="Assets/fl.jpg" />
         Apurva S Datta
       </div>
       <div class="gallery">
-        <img src="m3.jpg" />
+        <img src="Assets/m1.jpg" />
         Anirudh Pundir
       </div>
       <div class="gallery">
-        <img src="m2.jpg" />
+        <img src="Assets/m2.jpg" />
         Shakir Hussain
       </div>
       <div class="gallery">
-        <img src="m1.jpg" />
+        <img src="Assets/m3.jpg" />
         Satwik Kambham
       </div>
       <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
