--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="Stylesheets/style.css" />
-    <title>Music Store</title>
+    <title>Symphony</title>
   </head>
   <body>
     <div class="container">
       <div class="navbar">
         <div class="logo">
           <img src="Assets/logo.png" alt="Logo" height="40" />
-          MUSIC PLAYER
+          SYMPHONY
         </div>
         <nav>
           <ul>
@@ -28,7 +28,7 @@
       </div>
 
       <div class="about">
-        <h2>Music Player</h2>
+        <h2>Symphony</h2>
         <br />
         <p>
           An all in one music streaming service which allows creators worldwide
@@ -49,7 +49,6 @@
           <input
             type="text"
             placeholder="Username"
-            autocomplete="username"
             id="loginUsername"
             required
           />
@@ -61,9 +60,6 @@
             required
           />
           <button type="button" class="btn" onclick="login()">Login</button>
-          <button type="button" class="btn" onclick="guestLogin()">
-            Guest Login
-          </button>
         </form>
         <form id="RegForm">
           <input
@@ -92,28 +88,24 @@
           <input
             type="email"
             placeholder="E-Mail"
-            autocomplete="email"
             id="registerEmail"
             required
           />
           <input
             type="text"
             placeholder="Mobile No."
-            autocomplete="tel"
             id="registerMobile"
             required
           />
           <input
             type="password"
             placeholder="Password"
-            autocomplete="new-password"
             id="registerPassword"
             required
           />
           <input
             type="password"
             placeholder="Confirm Password"
-            autocomplete="current-password"
             id="registerConfirm"
             required
           />
