--- a/profile.html
+++ b/profile.html
@@ -22,9 +22,11 @@
         </div>
         <nav>
           <ul>
-            <li class="nav"><a href="main.html">HOME</a></li>
-            <li class="nav"><a href="about.html">ABOUT US</a></li>
-            <li class="nav"><a href="index.html">LOGOUT</a></li>
+            <li class="nav">
+              <a onclick="main()" style="cursor: pointer">HOME</a>
+            </li>
+            <li class="nav"><a href="../../about.html">ABOUT US</a></li>
+            <li class="nav"><a href="../..">LOGOUT</a></li>
           </ul>
         </nav>
       </div>
