added option to add songs to database

--- a/profile.html
+++ b/profile.html
@@ -75,6 +75,9 @@
         <button class="btn" onclick="editProfile()" id="editbtn">
           Edit Profile
         </button>
+        <button class="btn" onclick="manageSongs()" id="artistbtn">
+          Manage your songs
+        </button>
         <br />
         <hr />
         <br />
