--- a/main.html
+++ b/main.html
@@ -5,12 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home page</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="../Stylesheets/main.css" />
   </head>
   <body>
@@ -36,141 +30,10 @@
     </div>
     <br />
 
-    <center>
-      <h2>All Time Favourites</h2>
+    <h2>All Time Favourites</h2>
 
-      <div class="first">
-        <img src="../Assets/Cover.jpg" alt="Flowers in Chania" />
-        <hr />
-        <div class="second">
-          <p>Raabta</p>
-          <p>Singer: Arijit Singh</p>
-          <p>Duration: 3:34 min</p>
-          <p>Views: 49 Millon</p>
-        </div>
-        <hr />
-        <audio controls>
-          <source src="raabta.mp3" type="audio/mp3" />
-        </audio>
-      </div>
+    <div id="songs"></div>
 
-      <div class="first">
-        <img src="../Assets/Cover1.jpg" alt="Flowers in Chania" />
-        <hr />
-        <div class="second">
-          <p>Hawa Banke</p>
-          <p>Singer: Darshan Raval</p>
-          <p>Duration: 3:44 min</p>
-          <p>Views: 167 Millon</p>
-        </div>
-        <hr />
-        <audio controls>
-          <source src="hawa.mpeg" type="audio/mpeg" />
-        </audio>
-      </div>
-      <div class="first">
-        <img src="../Assets/Cover2.jpg" alt="Flowers in Chania" />
-        <hr />
-        <div class="second">
-          <p>Chidiya</p>
-          <p>Singer: Vilen</p>
-          <p>Duration: 6:54 min</p>
-          <p>Views: 102 Millon</p>
-        </div>
-        <hr />
-        <audio controls>
-          <source src="chidiya.mp3" type="audio/mp3" />
-        </audio>
-      </div>
-      <div class="first">
-        <img src="../Assets/Cover3.jpg" alt="Flowers in Chania" />
-        <hr />
-        <div class="second">
-          <p>Aaya Na Tu</p>
-          <p>Singer: Arjun Kanungo</p>
-          <p>Duration: 3:30 min</p>
-          <p>Views: 100 Millon</p>
-        </div>
-        <hr />
-        <audio controls>
-          <source src="aaya.mp3" type="audio/mp3" />
-        </audio>
-      </div>
-
-      <div class="first">
-        <img src="../Assets/Cover.jpg" alt="Flowers in Chania" />
-        <hr />
-        <div class="second">
-          <p>Jashn-E-Bahara</p>
-          <p>Singer: A.R.Rahman</p>
-          <p>Duration: 2:07 min</p>
-          <p>Views: 8 Millon</p>
-        </div>
-        <hr />
-        <audio controls>
-          <source src="jeb.mp3" type="audio/mp3" />
-        </audio>
-      </div>
-
-      <div class="first">
-        <img src="../Assets/Cover1.jpg" alt="Flowers in Chania" />
-        <hr />
-        <div class="second">
-          <p>Jashn-E-Bahara</p>
-          <p>Singer: A.R.Rahman</p>
-          <p>Duration: 2:07 min</p>
-          <p>Views: 8 Millon</p>
-        </div>
-        <hr />
-        <audio controls>
-          <source src="too.mp3" type="audio/mp3" />
-        </audio>
-      </div>
-
-      <div class="first">
-        <img src="../Assets/Cover2.jpg" alt="Flowers in Chania" />
-        <hr />
-        <div class="second">
-          <p>Yeh Sham Mastani</p>
-          <p>Singer: Kishor Kumar</p>
-          <p>Duration: 1:27 min</p>
-          <p>Views: 3.5 Millon</p>
-        </div>
-        <hr />
-        <audio controls>
-          <source src="sham.mp3" type="audio/mp3" />
-        </audio>
-      </div>
-      <div class="first">
-        <img src="../Assets/Cover3.jpg" alt="Flowers in Chania" />
-        <hr />
-        <div class="second">
-          <p>Asal Mein</p>
-          <p>Singer: Darshan Raval</p>
-          <p>Duration: 3:56 min</p>
-          <p>Views: 138Millon</p>
-        </div>
-        <hr />
-        <audio controls>
-          <source src="asal.mp3" type="audio/mp3" />
-        </audio>
-      </div>
-
-      <div class="first">
-        <img src="../Assets/Cover.jpg" alt="Flowers in Chania" />
-        <hr />
-        <div class="second">
-          <p>Love Dose</p>
-          <p>Singer: Honey Singh</p>
-          <p>Duration: 4:36 min</p>
-          <p>Views: 344 Millon</p>
-        </div>
-        <hr />
-        <audio controls>
-          <source src="love.mp3" type="audio/mp3" />
-        </audio>
-      </div>
-    </center>
     <script src="../Scripts/main.js"></script>
   </body>
 </html>
