--- a/songs.html
+++ b/songs.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../Stylesheets/style.css" />
+    <link rel="stylesheet" href="../Stylesheets/songs.css" />
     <title>Symphony</title>
   </head>
   <body>
