--- a/about.html
+++ b/about.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Stylesheets/about.css" />
-    <title>About Us</title>
+    <title>Musico</title>
   </head>
   <body>
     <div class="bg">
       <div class="links">
-        <h1><u>Symphony</u></h1>
+        <h1><u>Musico</u></h1>
         <ul>
           <li>
             <a href="index.html"><u>Home</u></a>
@@ -25,12 +25,12 @@
       <u><b>About Us</b></u>
     </p>
     <p class="about_us">
-      As a feature of Symphony – the New Music Company, we have immediately<br />
+      As a feature of Musico – the New Music Company, we have immediately<br />
       developed as the greatest new player in the generation and bespoke music
       organizations<br />
       for TV, film, radio, amusements, on the web and promoting markets.<br /><br />
 
-      The Symphony Production Music group are a gathering of music makers,
+      The Musico Production Music group are a gathering of music makers,
       <br />
       authorizing directors and media experts who can control your music and
       sound needs from<br />
