--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="Stylesheets/style.css" />
-    <title>Symphony</title>
+    <title>Musico</title>
   </head>
   <body>
     <div class="container">
       <div class="navbar">
         <div class="logo">
           <img src="Assets/logo.png" alt="Logo" height="40" />
-          SYMPHONY
+          MUSICO
         </div>
         <nav>
           <ul>
@@ -28,7 +28,7 @@
       </div>
 
       <div class="about">
-        <h2>Symphony</h2>
+        <h2>Musico</h2>
         <br />
         <p>
           An all in one music streaming service which allows creators worldwide
