--- a/main.html
+++ b/main.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home page</title>
+    <title>Musico</title>
     <link rel="stylesheet" href="../Stylesheets/main.css" />
   </head>
   <body>
     <div class="bg">
       <div class="links">
-        <h1><u>Symphony</u></h1>
+        <h1><u>Musico</u></h1>
         <ul>
           <li>
             <a id="username"></a>
