--- a/profile.html
+++ b/profile.html
@@ -11,14 +11,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../Stylesheets/profile.css" />
-    <title>Symphony</title>
+    <title>Musico</title>
   </head>
   <body>
     <div class="container">
       <div class="navbar">
         <div class="logo">
           <img src="../Assets/logo.png" alt="Logo" height="40" />
-          SYMPHONY
+          MUSICO
         </div>
         <nav>
           <ul>
