Added some stuff to the login page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <br />
         <p>
           An all in one music streaming service which allows creators worldwide
-          to eaily make their music available to the public.
+          to easily make their music available to the public. 
         </p>
       </div>
 
@@ -119,15 +119,19 @@
       <br />
 
       <div class="subscription">
-        <h2>Pricing</h2>
+        <h2>Subscription</h2>
         <br />
         <p>
-          Pricing of subscription <br />
-          Benefits of subscription <br />
+          Users can choose between three levels of subscriptions -
+          <ol class="list">
+            <li>Basic,</li>
+            <li>Tier 1,</li>
+            <li>Tier 2</li>
+          </ul>
+          Each of the subscriptions comes with increasing access to exclusive music.
+          <br>
+          Register today to listen to your favourite songs.
         </p>
-        <ul class="list">
-          <li>Benefit 1</li>
-        </ul>
       </div>
     </div>
     <script src="Scripts/script.js"></script>
